--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@ body {line-height: 1.5; font-family: Arial, Verdana, sans-serif; font-size: 1.3e
 
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after, q:before, q:after {content: '';}
-table {border-collapse: collapse; border-spacing: 0; margin: 0 auto; background: #333;}
+table {border-collapse: collapse; border-spacing: 0; margin: 20% auto; background: url(trnsp.png) repeat top left;}
+th {text-align: left;}
+tr:nth-child(even) {background: url(trnsp.png) repeat top left;}
+col:first-child {font-weight: bold;}
 
 small {font-size: 80%;}
 i, em {font-style: oblique;}
