--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@ body {line-height: 1.5; font-family: Arial, Verdana, sans-serif; font-size: 1.3e
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after, q:before, q:after {content: '';}
 table {border-collapse: collapse; border-spacing: 0; margin: 20% auto; background: url(trnsp.png) repeat top left; color: #bbb;}
-th {text-align: left;}
-th:nth-child(3n) {text-align: center;}
-th:nth-child(4n) {text-align: center;}
+th {text-align: center; letter-spacing: 1px; font-variant: small-caps;}
 td {padding: 5px 15px;}
 tr:nth-child(even) {background: url(trnsp.png) repeat top left;}
 td:first-child {font-weight: bold;}
