--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ body {line-height: 1.5; font-family: Arial, Verdana, sans-serif; font-size: 1.3e
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after, q:before, q:after {content: '';}
 table {border-collapse: collapse; border-spacing: 0; margin: 20% auto; background: url(trnsp.png) repeat top left; color: #bbb;}
-th {text-align: center; letter-spacing: 1px;}
+th {text-align: center;}
 td {padding: 5px 15px;}
 tr:nth-child(even) {background: url(trnsp.png) repeat top left;}
-td:first-child {font-weight: bold; font-variant: small-caps}
+td:first-child {font-weight: bold; font-variant: small-caps; letter-spacing: 1px;}
 
 button {padding: 10px; background: transparent; color: #bbb;}
 button:hover {padding: 10px; background: #fff; color: #333;}
