--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ body {line-height: 1.5; font-family: Arial, Verdana, sans-serif; font-size: 1.3e
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after, q:before, q:after {content: '';}
 table {border-collapse: collapse; border-spacing: 0; margin: 20% auto; background: url(trnsp.png) repeat top left; color: #bbb;}
-th {text-align: center;}
+th {text-align: center; padding: 10px; background: #b0dae8; color: #333;}
 td {padding: 5px 15px;}
 tr:nth-child(even) {background: url(trnsp.png) repeat top left;}
-td:first-child {font-weight: bold; font-variant: small-caps; letter-spacing: 1px;}
+td:first-child {font-weight: bold; letter-spacing: 1px;}
 
-button {padding: 10px; background: transparent; color: #bbb;}
-button:hover {padding: 10px; background: #fff; color: #333;}
+button {padding: 10px; background: transparent; color: #bbb; border: 0;}
+button:hover {padding: 10px; background: transparent; color: #fff;}
+button:focus {outline-color: #ccc;}
 button.selecttup {color: #880000;}
 button.selectdn {color: #008800;}
 
