--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ td {padding: 5px 15px;}
 tr:nth-child(even) {background: url(trnsp.png) repeat top left;}
 td:first-child {font-weight: bold; letter-spacing: 1px;}
 
+input {padding: 10px; background: url(trnsp.png) repeat top left; font-family: Arial, Verdana, sans-serif; font-size: 0.7em;}
+
 button {padding: 10px; background: transparent; color: #bbb; border: 0;}
 button:hover {padding: 10px; background: transparent; color: #fff;}
 button:focus {outline-color: #ccc;}
