--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ td {padding: 5px 15px;}
 tr:nth-child(even) {background: url(trnsp.png) repeat top left;}
 td:first-child {font-weight: bold; letter-spacing: 1px;}
 
-input {padding: 10px; background: url(trnsp.png) repeat top left; font-family: Arial, Verdana, sans-serif; font-size: 0.7em; border: none; outline-color: #ccc;}
+input {padding: 10px; background: url(trnsp.png) repeat top left; font-family: Arial, Verdana, sans-serif; font-size: 0.7em; border: none; outline-color: #ccc; color: #fff;}
 
 button {padding: 10px; background: transparent; color: #bbb; border: 0;}
 button:hover {padding: 10px; background: transparent; color: #fff;}
 button:focus {outline-color: #ccc;}
-button.selecttup {color: #880000;}
-button.selectdn {color: #008800;}
+button.selecttup {color: #9eff91;}
+button.selectdn {color: #ff9191;}
 
 small {font-size: 80%;}
 i, em {font-style: oblique;}
