--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {line-height: 1.5; font-family: Arial, Verdana, sans-serif; font-size: 1.3e
 
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after, q:before, q:after {content: '';}
-table {border-collapse: collapse; border-spacing: 0; margin: 15% auto; background: url(trnsp.png) repeat top left; color: #bbb;}
+table {border-collapse: collapse; border-spacing: 0; margin: 10% auto; background: url(trnsp.png) repeat top left; color: #bbb;}
 th {text-align: center; padding: 10px; background: #b0dae8; color: #333;}
 td {padding: 5px 15px;}
 tr:nth-child(even) {background: url(trnsp.png) repeat top left;}
@@ -20,10 +20,13 @@ button:hover {padding: 10px; background: transparent; color: #fff;}
 button:focus {outline-color: #ccc;}
 button.selecttup {color: #ff9191;}
 button.selectdn {color: #9eff91;}
-
-small {font-size: 80%;}
-i, em {font-style: oblique;}
-b, strong {font-weight: bold; font-size: 95%;}
-img {padding: 20px;}
+button.topicadded {color: #fff;}
+button.topicadded:hover {color: #b0dae8;}
 
 .center {text-align: center;}
+
+/* smaller screens */
+@media screen and (max-width: 1080px){
+body {font-size: 1.5em;}
+table {margin: 2% auto;}
+}
